# PikachuGame

./: .gitignore  CMakeLists.txt  README.md  build_windows.cmd  console.h  main.cpp  main.h  utils.h
.github/workflows/: c-cpp.yml
asset/: gameData.txt  pikachu_large.txt  pokeball_right.txt  pokeball_success_2.txt
asset/text/: leaderboard_logo.txt  leaderboard_text.txt  pikamatch_background.txt  pikamatch_text.txt  pokeball_default.txt  pokeball_left.txt  pokeball_success_0.txt  pokeball_success_1.txt  pokemon_growlithe.txt  pokemon_pikachu.txt  pokemon_skitty.txt
src/: audio.h  bfs.h  board.h  console.h  constant.h  controller.h  coord.h  data.h  drawer.h  main.cpp  main.h  pokemon.h  task.h  utils.h
test/: conio_test.cpp
